static/css/inbox.less
/* ... */
.container-fluid {
  background-color: @background-color;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.content {
  .page {
    top: 8.7em;
    bottom: 0;
    position: absolute;
    width: 100%;
    max-width: @content-width;
    z-index: 2;
  }

  .inbox {
    background-color: @background-color;
  }
}

.inbox-items, .item-content {
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
  background-color: @background-color;
}

.content .item-content.empty-selection {
  text-align: center;
  color: #C2C2C2;
  text-shadow: 1px 1px 4px rgba(255, 255, 255, 1);
  font-size: 2em;

  .fa {
    font-size: 2em;
  }

  > div {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    margin: 0px;
  }
}

.content-pane {
  height: 100%
}
.message-content-wrapper {
  height: 100%;
  .item-content {
    bottom: 57px;
    top: 2em;
    position: absolute;
    height: auto;
    right: 0;
  }
  .name-header, .reply {
    background-color: @lightgrey;
  }
  .reply {
    position: absolute;
    right: 0;
    bottom: 0;
    padding: 0.5em;
    div {
      padding: 0;
    }
    textarea {
      width: 100%;
      height: 3em;
      padding: 0.6em;
      resize: none;
    }
    .message-actions {
      display: none;
      text-align: right;
      .btn-link {
        float: left;
      }
      .note {
        margin-right: 1em;
      }
    }
    &.sending {
      textarea {
        height: 6em;
      }
      .message-actions {
        display: block;
      }
    }
  }
  .name-header {
    height: 2em;
    line-height: 2em;
    .sender .position {
      position: absolute;
      top: 0;
      right: 15px;
    }
  }
  .recipient {
    display: none;
  }
}

.messages .inbox-items li {
  .message-wrapper:hover {
    border-left-color: @messages-color;
  }
  &.selected {
    background-color: lighten(@messages-color, 30%);
  }
}

.tasks .inbox-items li {
  .message-wrapper:hover {
    border-left-color: @tasks-color;
  }
  &.selected {
    background-color: lighten(@tasks-color, 25%);
  }
}

.reports {
  .inbox-items li {
    .message-wrapper:hover {
      border-left-color: @reports-color;
    }
    &.selected {
      background-color: lighten(@reports-color, 30%);
    }
    input[type="checkbox"] {
      display: none;
      float: left;
      height: 2em;
      position: absolute;
      left: 5px;
    }
  }
  &.select-mode {
    .inbox-items li input[type="checkbox"] {
      display: inline;
    }
    .report-body .summary {
      cursor: pointer;
    }
  }
}

.contacts {
  .fa-star.primary {
    color: @primary-color;
    font-size: 12px;
    vertical-align: middle;
  }
  .inbox-items li {
    .message-wrapper:hover {
      border-left-color: @contacts-color;
    }
    &.home {
      background-color: @seperator-color;
    }
    &.selected {
      background-color: lighten(@contacts-color, 30%);
    }
    &.orphan .detail {
      margin-top: 0.42em;
    }
  }
  .action-list {
    .accent {
      border-top: 5px solid transparent;
    }
    .row a {
      border-left: 5px solid transparent;
    }
  }
  .action-list.children {
    .accent,
    .row a:hover {
      border-color: @contacts-color;
    }
  }
  .action-list.tasks {
    .accent,
    .row a:hover {
      border-color: @tasks-color;
    }
    .relative-date.past {
      color: @error-color;
    }
  }
  .action-list.reports {
    .accent,
    .row a:hover {
      border-color: @reports-color;
    }
  }
  h4 {
    padding-left: 15px;
    margin-top: 20px;
    margin-bottom: 5px;
  }
}

.tasks {
  .inbox-items .mm-badge {
    padding-top: 0;
    margin-top: 0;
  }
  .item-content .actions a {
    margin-right: 1em;
  }
}

.contacts .message-wrapper .fa {
  color: @ok-color;
}

.inbox-items {
  padding: 0;
  background-color: @form-background-color;
  border-left: 1px solid @seperator-color;

  ul {
    margin-bottom: 0;
  }

  li {
    border-bottom: 1px solid @seperator-color;
    cursor: pointer;
    white-space: nowrap;
    overflow: hidden;

    span {
      white-space: normal;
    }

    .mm-badge {
      float: left;
      margin-left: 0;
    }

    .message-wrapper {
      padding: 1em;
      border-left: 5px solid transparent;
      min-height: 4em;
      display: block;
      text-decoration: none;
      color: inherit;
      outline: 0;
    }
  }

  .read {
    background-color: @background-color;
    .sender .name {
      font-weight: normal;
    }
  }

  .detail .description {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .sender .phone {
    display: none;
  }

  .alert {
    margin: 1em;
  }

  .time {
    margin-left: 1em;
  }

  .padding {
    height: 150px;
  }

}

.loading-status {
  margin: 1em;
  text-align: center;
  font-weight: bold;
}

.scheduled-tasks {
  padding: 1em;
  .loader {
    font-size: 6px;
  }
}

.reports, .contacts {
  .inbox-items .detail {
    margin-left: 2.5em;
  }
}

.messages .inbox-items .detail {
  padding-right: 0.5em;
}

.task-state {
  color: #AAAAAA;
  .state {
    font-weight: bold;
    &:before {
      content: '\f111';
      font-family: FontAwesome;
      font-size: 0.8em;
      margin-right: 0.5em;
    }
    &.received:before {
      content: '';
      margin-right: 0;
    }
    &.pending:before {
      color: @pending-state-color;
    }
    &.muted:before {
      color: @muted-state-color;
    }
    &.cleared:before {
      color: @cleared-state-color;
    }
    &.sent:before {
      color: @sent-state-color;
    }
    &.scheduled:before {
      color: @scheduled-state-color;
    }
    &.delivered:before {
      color: @delivered-state-color;
    }
    &.failed:before {
      color: @scheduled-state-color;
    }
  }
}
/* ... */

